# lol-intra-league-predictor

./: README.md  app.py  main.py  pyproject.toml  random_forest.pkl
data/cleaned/: matches.csv  new_match.csv  teams.csv
data/cleaned/matches/: 2023.csv  2024.csv  2025.csv
data/cleaned/teams/: 2023.csv  2024.csv  2025.csv
data/featured/: new_data.csv  val.csv
data/merged/: data.csv  new_data.csv
notebooks/: adaboost.ipynb  decision_tree_train.ipynb  logistic_regression.ipynb  metrics.py  random_forest_train.ipynb  training_utils.py  xg_boost.ipynb
scrap/golgg/: config.py
scrap/golgg/data/: LCK 2025 Rounds 3-5_matches.csv  LCK 2025 Season Play-In_matches.csv  LCK 2025 Season Playoffs_matches.csv  LCK Cup 2025_matches.csv  LCK Regional Finals 2024_matches.csv  LCK Spring 2023_matches.csv  LCK Spring 2024_matches.csv  LCK Spring Playoffs 2023_matches.csv  LCK Summer Playoffs 2024_matches.csv  LCP 2025 Mid Season Qualifying Series_matches.csv  LCP 2025 Mid Season_matches.csv  LCP 2025 Season Finals Playoffs_matches.csv  LCP 2025 Season Finals_matches.csv  LCS Championship 2023_matches.csv  LCS Championship 2024_matches.csv  LCS Spring 2024_matches.csv  LCS Spring Playoffs 2023_matches.csv  LCS Spring Playoffs 2024_matches.csv  LCS Summer 2023_matches.csv  (+38 more)
src/data/: clean.py  clean_new_data.py  feature.py  feature_new_data.py  merge.py  merge_new_data.py
src/models/: predict.py  random_forest.pkl  random_forest.py
src/utils/: process_data.py  process_new_data.py
tests/: test_clean.py  test_clean_data_teams.csv
user/: new_match.csv
(+138 files in other folders)
