[project]
name = "lol-intra-league-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "scipy>=1.11",
    "xgboost>=2.0",
    "matplotlib",
    "seaborn",
]
