[project]
name = "lol-intra-league-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "scipy>=1.11",
    "xgboost>=2.0",
    "matplotlib",
    "seaborn",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "streamlit>=1.52.2",
    "black[jupyter]>=25.12.0",
    "pylint>=4.0.4",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
